--- a/Client/BrzoDoLokacije/app/src/main/res/values/strings.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dim">16dp</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="dodaj_objavu">Dodaj objavu</string>
+    <string name="todo">TODO</string>
 </resources>
